--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://aximov.github.io/nya-n"
+baseurl = "https://aximov.github.io/nya-n/"
 DefaultContentLanguage = "en"
 #DefaultContentLanguage = "ja"
 title = "nya -n"
