change baseurl & build

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://aximov.github.io/nya-n/"
+baseurl = "https://nya-n.aximov.net"
 DefaultContentLanguage = "en"
 #DefaultContentLanguage = "ja"
 title = "nya -n"
